--- a/portofolio.html
+++ b/portofolio.html
@@ -32,7 +32,7 @@
             <h1>My portfolio</h1>
             <p>Just click this button... </p>
 
-            <a href="#" class="cta">my portfolio</a>
+            <a href="https://drive.google.com/file/d/134zpIC0J92fF_LHHxs1u_xudQMqHFI_I/view?usp=sharing" class="cta">my portfolio</a>
         </main>
 
 
